[package]
authors = ["ryochansq"]
edition = "2018"
name = "sakura_face_api"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = {version = "3.3.0", features = ["openssl"]}
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.62"
